<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/result_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.app.mobile.rimbaherbaperlis.Question1">

    <TextView
        android:id="@+id/final_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/finish"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/result"
        android:layout_below="@id/final_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/result"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/final_score"
        android:layout_below="@id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:textSize="36sp"/>

    <TextView
        android:id="@+id/out10"
        android:layout_below="@id/final_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:text="@string/out_of_10"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/share"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@color/colorAccent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:layout_centerHorizontal="true"
        android:text="@string/share"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"/>

</RelativeLayout>