<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="com.app.mobile.rimbaherbaperlis.travia">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@color/colorAccent"
        android:padding="32dp"
        android:textAlignment="center"
        android:text="@string/welcome"
        android:textColor="#ffffff"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:padding="32dp"
        android:textAlignment="center"
        android:text="@string/message"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:background="@color/colorAccent"
        android:textColor="#ffffff"
        android:text="@string/start" />
</LinearLayout>
