<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.app.mobile.rimbaherbaperlis.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:background="@color/colorBackground">


        <TextView
            android:text="@string/content"
            android:textColor="@color/colorBlack"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/imageView2"
            android:src="@drawable/test"
            android:layout_weight="0.41" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_weight="0.46">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Button
                    android:text="@string/content1"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnIntroduction"
                    android:onClick="onButtonIntroduction" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <Button
                    android:text="@string/content2"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnLocation"
                    android:onClick="onButtonLocation" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <Button
                    android:text="@string/content3"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnTypes"
                    android:onClick="onButtonTypes" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <Button
                    android:text="@string/content4"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnGames"
                    android:onClick="onButtonGames" />
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <Button
                    android:text="@string/content5"
                    android:textColor="@color/colorWhite"
                    android:background="@color/colorButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnGallery"
                    android:onClick="onButtonGallery" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</RelativeLayout>
